k8s/base/backend/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
        env: prod
        version: v2.1.21
      annotations:
        deployed-by: luisrodvillada
        description: Backend service for Wellness Ops application
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
      - name: backend
        image: ghcr.io/luisrodvilladaorg/wellness-ops-backend:base
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop: ["ALL"]

        ports:
          - containerPort: 3000

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 512Mi

        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5

        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
