k8s/base/backend/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  
  labels:
    app: backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
